Acabat GEP. Acabat seguiment. Comencem memoria.

--- a/doc/gep/assignment2/risk.tex
+++ b/doc/gep/assignment2/risk.tex
@@ -1,11 +1,11 @@
 \section{Risk management: alternative plans and obstacles}
 
 \begin{itemize}
-  \item \textbf{MareNostrum4 not available}: The unavailability of the machine can lead to delays in almost all tasks. In general when the machine becomes unavailable in 1 day the issue is solved. We can expect a delay of maximum a $5\%$ of the expected time. If a catastrophic event happens to the machine and it becomes unavailable during a notable period of time it is contemplated to move the study to a similar machine that BSC disposes of. This implies an increment of $\si{20\hour}$ to move the project and adapt to the new environment.
+  \item \textbf{MareNostrum4 not available}: The unavailability of the machine can lead to delays in almost all tasks. In general when the machine becomes unavailable in 1 day the issue is solved. We can expect a delay of maximum a $5\%$ of the expected time. If a catastrophic event happens to the machine and it becomes unavailable during a notable period of time it is contemplated to move the study to a similar machine that BSC disposes of. This implies an increment of $\si{20\hour}$ to move the project and adapt to the new environment. Tasks affected: T.2, T.3 and T.4.
 
-  \item \textbf{Misinterpretation of a metric during the analysis}: This can lead to small delays of maximum $\si{5\hour}$. From previous experiences we can expect to not affect the project timing and this risk will be lesser as the researcher is more experienced.
+  \item \textbf{Misinterpretation of a metric during the analysis}: This can lead to small delays of maximum $\si{5\hour}$. From previous experiences we can expect to not affect the project timing and this risk will be lesser as the researcher is more experienced. Tasks affected: T.3
 
-  \item \textbf{Incorrect runs}: This risk affects the project for maximum $\si{2\hour}$ as it is fast to detect and fast to fix.
+  \item \textbf{Incorrect runs}: This risk affects the project for maximum $\si{2\hour}$ as it is fast to detect and fast to fix. Tasks affected: T.3 and T.4
 
-  \item \textbf{Machine noise}: As this risk is contemplated and it is solved by gathering the proper number of samples it is already contemplated on the duration of the tasks and won't affect the timing of the project.  
+  \item \textbf{Machine noise}: As this risk is contemplated and it is solved by gathering the proper number of samples it is already contemplated on the duration of the tasks and won't affect the timing of the project. Tasks affected: T.3 and T.4. 
 \end{itemize}
