--- a/doc/gep/assignment2/tasks.tex
+++ b/doc/gep/assignment2/tasks.tex
@@ -2,23 +2,31 @@
 
 \subsection{Project management}
 
+\justify
 Project management is a compulsory task for any project. 
 
 \subsubsection{Meetings}
+\justify
 Regular meetings are contemplated to keep track of the progress of tasks and to make decisions. It is planned to do approximately 2.5 hour of meetings per week. Time estimated: $\si{45\hour}$ 
 \subsubsection{Context and scope of the project}
+\justify
 Definition of context and scope of the project. Time estimated: $\si{30\hour}$
 \subsubsection{Time Planning}
+\justify
 Definition of the tasks and the time planning of the project. Time estimated $\si{10\hour}$
 \subsubsection{Budget and sustainability}
+\justify
 Compute the monetary costs of the project. Definition of the sustainability report. Time estimated $\si{10\hour}$
 \subsubsection{Integration and final document}
+\justify
 Review, fix and integrate the last 3 tasks into a final document that groups all the information related to the project management. Time estimated $\si{15\hour}$
 
 \subsection{Hands-on}
+\justify
 These tasks are intended to get introduced to the application analysed and ensure we are analysing the correct thing.
 \subsubsection{Contact with application developers}
 
+\justify
 We will meet with the application developers where they will introduce us to the application module. The following points will be worked:
 \begin{itemize}
   \item Basic explanation of the science between the module and the input case.
@@ -30,60 +38,80 @@ We will meet with the application developers where they will introduce us to the
   \item First runs of the code.
 \end{itemize}
 
+\justify
 Time estimated: $\si{10\hour}$
 \subsubsection{Study the compilation process}
 
+\justify
 It is very important to understand the compilation process and the different options that the build chain allows. This is a simple task but helps a lot in minimizing the possible errors we can encounter adding or modifying the code in the future.
 
+\justify
 Time estimated: $\si{15\hour}$
 
 \subsubsection{Run and test the application}
+\justify
 Every user in a HPC machine has its own environment. As the code is in development process and I may need to modify it an make my own installations thus some things from the application may differ. It is a critical task to perform some runs and verify with the application developers that we are not having errors, we are running the correct thing and the intended thing to analyse.  
 
+\justify
 Time estimated: $\si{15\hour}$
 
 \subsection{Performance analysis}
 
 \subsubsection{Trace extraction}
+\justify
 Once everything it is sanity-checked, the environment is ready and we are familiarized with the application the next step is to extract traces of the executions. As we will use the POP method we will need traces from executions from 1 process to 48 process and from 1 node to 16 nodes. This process is long and needs to operate with data.
 
+\justify
 Time estimated: $\si{30\hour}$
 
 \subsubsection{Modelfactors}
+\justify
 Once we have the traces we have to use basic analysis tool in order the extract the POP metrics from the executions. This process require a few hours to process the traces but nothing compared to extracting them.
 
+\justify
 Time estimated: $\si{10\hour}$
 
 \subsubsection{Focus of analysis}
+\justify
 In this stage of the project we will study the results of the modelfactors. From the results we will obtain insights into what is reducing the performance of the application. With this, we will use the other BSC tools to find the bottlenecks. Once the bottlenecks are found we will need to quantize the real impact on the performance to know which bottleneck is better to optimize. This bottleneck will be called the "Focus of analysis".
 
+\justify
 Knowing the time estimated is tricky as it depends on the easy is to identify the bottlenecks and the analysis in general, but, based in previous expiriences we estimate a total of $\si{35\hour}$
 
 \subsubsection{Feedback to application developers}
+\justify
 At this point of the project, a presentation and a conclusions of the analysis will be prepared and presented to the application developers.
 
+\justify
 Estimated time: $\si{15\hour}$
 
 \subsection{Optimization}
 \subsubsection{Design implementation}
+\justify
 Based on the results of the previous section, we will decide what we will do to attack the bottleneck. The decision and the design it is an unknown for now. It is expected to be a total of $\si{30\hour}$ long.
 
 \subsubsection{Implementation}
+\justify
 This phase is the great unknown of the project since we do not know what we are going to optimize or what we are going to do to optimize it. It is also the main task of the project and the one that will surely take the most hours. However, we cannot know how long it will take, since for now what we are going to do is unknown. Based on previous experiences and the time limit of the project we expect to invest $\si{100\hour}$ in this phase.
 
 \subsection{Testing implementation}
+\justify
 It is mandatory to test and ensure that the modifications the code still lead to a correct program. A proper testing suite in collaboration with the application developers will be done.
 
+\justify
 Time estimated: $\si{30\hour}$
 
 \subsubsection{Evaluation of the improvements}
+\justify
 Once the job is done it is very important to evaluate the performance of the application with the improvements. This task consists of gathering traces and timing data from both versions, the one which is improved and the original one and elaborating a final conclusions of how is performing the optimization.
 
+\justify
 Time estimated: $\si{40\hour}$
 
 
 \subsection{Final milestone}
 
+\justify
 It is necessary to write the documentation before ending the project. Two sub-tasks are expected:
 \begin{itemize}
   \item Memory redaction. Time estimated: $\si{70\hour}$
@@ -92,6 +120,7 @@ It is necessary to write the documentation before ending the project. Two sub-ta
 
 \subsection{Task dependencies and summary of tasks}
 
+\justify
 Table \ref{tab:tasks} shows a summary of tasks and it's dependencies. Almost each tasks depends on its predecessor making this project really sequential.
 
 \begin{table}[htbp]
@@ -130,8 +159,10 @@ T5.2 & Presentation prepration                          & 15       & T5.1       
 
 \subsubsection{Human resources}
 
+\justify
 The BSC researcher will be in charge of the project and will be the main responsible of all tasks.
 
+\justify
 Other human resources are:
 \begin{itemize}
   \item The project director that is responsible of tracking the status of the project and giving feedback and suggestions to the researcher.
