--- a/doc/gep/seguiment/context.tex
+++ b/doc/gep/seguiment/context.tex
@@ -184,3 +184,68 @@ In the case of optimizing the combustion module it will impact because combustio
 
 \justify
 Optimizing a code also implies that the application users will use less time the machine which means that they will use less energy for their research.
+
+\section{Work plan}
+In this Section we review the objectives defined during the thesis management course, present the state of each objectives and modifications to objectives.
+
+\subsection{Objectives}\label{sec:objectives}
+
+\justify
+The project is divided into two main objectives.
+\begin{itemize}
+  \item Perform a rigorous Performance Analysis following the POP methodology and identify bottlenecks provided by a real and industry use case in combustion state-of-the-art.
+  \item Knowing the bottlenecks, propose, implement and test optimizations to the code that improve the performance and efficiency of the code..
+\end{itemize}
+
+\justify
+Other sub-objectives are:
+\begin{itemize}
+  \item Learn and gain experience on the performance analysis and optimization field.
+  \item Document and explain Performance Analysis finding to developers and scientists responsible of the code that are not necessary experts in the performance analysis field.  
+\end{itemize}
+
+\subsection{Current state of the project}
+
+Section \ref{sec:objectives} presents the objectives of the project planned during the thesis management course. This Section extends it with the state of the goals and modifications.
+
+On the main objectives, the state is:
+
+\begin{itemize}
+  \item The performance analysis of a real and industry use case in combustion state-of-the-art is completed successfully and the bottlenecks of the application are identified.
+
+  \item The optimization is proposed, implemented and tested and remains a rigorous study of how the optimization impacts the performance. Therefore, we decided to redefine the second objective to \textit{Knowing the bottlenecks, propose, implement and test optimizations to the code that improve the performance and efficiency and perform an analysis of how the optimization impacts the performance of the code.}
+\end{itemize}
+
+On the sub-objectives the state is:
+\begin{itemize}
+  \item A notable progress in the performance analysis and optimization knowledge is gained.
+
+  \item Documentation and explanations of the Performance Analysis findings to developers and scientists have been successfully given. The explanation and report of the optimizations remain to-do until the analysis of the optimization is finalized.
+\end{itemize}
+
+\section{Methodology and rigour}
+In this Section we review the methodology defined during the thesis management course and state if changes have been done.
+
+\justify
+The methodology relays in constant feedback between Marta Garcia (the project director) and me. As tasks are sequential, once a task is done the results are shared with the director and conclusions and definition of the next task is discussed. The feedback and the discussion are done via email, personal meetings or group meetings.
+
+\justify
+This work has been developed during the global pandemic of COVID-19 so telematic meetings are contemplated.
+
+\justify
+Another important aspect to cover is "Version Control" of the project. A git repository has been created for keeping track of the POP deliverables. Another git repository is created for tracking the changes to the code.
+
+\justify
+For storing the data we will use a Google  spreadsheet\footnote{Google office suite: \url{https://www.google.com/intl/es/drive/}} data sheet with the corresponding information about the runs and the tests performed. However, trace files and run logs are kept inside the MareNostrum 4 shared storage.
+
+\justify
+An issue page in the internal GitLab\footnote{Gitlab Community Edition: \url{https://about.gitlab.com/install/ce-or-ee/}} of the Best Practices for Performance and Programmability group has been created. In this page I will be posting updates about the work so the members of the team can be updated about the state of the project and we can keep track of it.
+
+\subsection{Review and changes}
+
+The methodology of the project will remain the same. The experience during the development of the project until now with this methodology is great and we have no problems neither modifications to it. 
+
+\section{Laws and regulation}
+
+There is no laws, neither regulations that apply to the main project actions.
+
