--- a/doc/main.tex
+++ b/doc/main.tex
@@ -31,16 +31,11 @@
     \listoftables
   }
 
-  \input{assignment1/assignment.tex}
-
-  \input{assignment2/assignment.tex}
-
-  \input{assignment3/assignment.tex}
-  
+  \input{background/background.tex}
 
   \clearpage
   \bibliographystyle{IEEEtran}
-  \bibliography{test}
+  \bibliography{TFG}
 
 \end{document}
 
