--- a/doc/gep/assignment2/gantt.tex
+++ b/doc/gep/assignment2/gantt.tex
@@ -1,7 +1,9 @@
 \section{Gantt}
 
+\justify
 The start of the project is expected by the 13/9/2020 which is the approximate start date of the thesis management course. The project is intended to end before the 29 of January that is the date of defence.
 
+\justify
 Figure \ref{fig:gantt} shows the gantt diagram of the project.
 
 \begin{sidewaysfigure}[htbp]
