--- a/doc/gep/assignment3/budget.tex
+++ b/doc/gep/assignment3/budget.tex
@@ -2,6 +2,7 @@
 
 \subsection{Staff}
 
+\justify
 The following roles are considered for developing the tasks described in the Gantt diagram.
 
 \begin{itemize}
@@ -9,6 +10,7 @@ The following roles are considered for developing the tasks described in the Gan
   \item Project manager. \textbf{Cost per hour:} 20.24 \euro / h
 \end{itemize}
 
+\justify
 Table \ref{tab:staffcost} shows given the tasks and the time to complete defined in the Gantt the hours each role focus on and the cost.
 
 \begin{table}[htbp!]
@@ -31,6 +33,7 @@ Total aggregated (\euro)    & \multicolumn{2}{c|}{7093}           \\ \hline
 
 \subsection{Material resources}
 
+\justify
 The estimate cost of the material resources are detailed in table \ref{tab:amort}. Mind that:
 \begin{itemize}
   \item Cost and amortization of MareNostrum4 machine is not included as some of the data needed to calculate that must remain confidential.
@@ -56,6 +59,7 @@ Total              & 3830                              & -                      
 \label{tab:amort}
 \end{table}
 
+\justify
 Table \ref{tab:fix} shows the fixed monthly expenses. A final calculation on the part of the costs that are related to the project is added in a column. For example, if is a cost related to all the office users is divided by the number of the workers in the office.
 \begin{table}[htbp!]
 \centering
@@ -73,6 +77,7 @@ Total                  & 6100                              & 30500              
 
 \subsection{Contingencies}
 
+\justify
 It is estimated a 15\% of the total of the amortizations and the staff costs for any contingency we could encounter during the project development.
 \begin{equation*}
   Cont=(Amort+Staff)*0.15=(7093+182.03)*0.15=1091.2545\ \euro
@@ -80,6 +85,7 @@ It is estimated a 15\% of the total of the amortizations and the staff costs for
 
 \subsection{Incidentals}
 
+\justify
 In the previous chapter we commented the possible incidentals. Table \ref{tab:inc} shows how the incidentals affect the budget.
 \begin{table}[htbp!]
 \centering
@@ -95,8 +101,12 @@ Total                     & 28.5                                      & 0       
 \label{tab:inc}
 \end{table}
 
+\justify
+We don't contemplate possible material costs associated to the MareNostrum 4 unavailable as it is the BSC the responsible of the machine maintenance and we are just users. 
+
 \subsection{Total}
 
+\justify
 Table \ref{tab:tot} shows the grouped predicted budget of the whole project. Notice that from this cost we have omitted software licenses and compute hours costs which are confidential.
 
 \begin{table}[htbp!]
