Avancem poc a poc

--- a/doc/TFG.bib
+++ b/doc/TFG.bib
@@ -43,6 +43,14 @@
   urldate={26-09-2018}
 }
 
+@misc{intelmkl,
+  title={Intel Math Kernel Library  website},
+  organization={Intel},
+  url={https://software.intel.com/content/www/us/en/develop/tools/math-kernel-library.html}
+  note={accessed on 23/12/2020},
+  urldate={23/12/2020}
+}
+
 @misc{tracedraw,
   author={Guillem Ramirez-Miranda},
   title={Tracedraw repository},
@@ -116,3 +124,13 @@
   organization={IEEE}
 }
 
+@misc{cantera,
+    author = "David G. Goodwin and Raymond L. Speth and Harry K. Moffat
+              and Bryan W. Weber",
+    title = "Cantera: An Object-oriented Software Toolkit for Chemical
+             Kinetics, Thermodynamics, and Transport Processes",
+    year = 2018,
+    note = "Version 2.4.0",
+    howpublished = "\url{https://www.cantera.org}",
+    doi = {10.5281/zenodo.1174508}
+}
