--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,22 +1,6 @@
-\documentclass[11pt, a4paper]{report}
+\documentclass[12pt, a4paper]{report}
 
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage{graphicx}
-\usepackage{caption}
-\usepackage{subcaption}
-\usepackage[british]{babel}
-\usepackage[none]{hyphenat}
-\usepackage[document]{ragged2e}
-\usepackage[colorlinks,bookmarksopen,bookmarksnumbered,citecolor=black,urlcolor=blue]{hyperref}
-\usepackage{tracedraw}
-\usepackage{array}
-\usepackage{siunitx}
-\usepackage{rotating}
-\usepackage{eurosym}
-\usepackage{amsmath}
-
-\graphicspath{ {./graphics/} }
+\include{preamble}
 
 \begin{document}
 
