--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -25,12 +25,13 @@
     tabsize=4, % tab space width
     showstringspaces=false, % don't mark spaces in strings
     numbers=left, % display line numbers on the left
-    commentstyle=\color{green}, % comment color
+    commentstyle=\color{gray}, % comment color
     keywordstyle=\color{blue}, % keyword color
     stringstyle=\color{red}, % string color
     emph={loops, loads, duration},      emphstyle=\color{red},
     basicstyle=\footnotesize\ttfamily,
-    breaklines=true
+    breaklines=true,
+    captionpos=b
 }
 
 \setlength{\oddsidemargin}{0.46cm}      %   Left margin on odd-numbered pages.
