Bibliography fixed error. Added gnu/make bib entry

--- a/doc/TFG.bib
+++ b/doc/TFG.bib
@@ -46,7 +46,7 @@
 @misc{intelmkl,
   title={Intel Math Kernel Library  website},
   organization={Intel},
-  url={https://software.intel.com/content/www/us/en/develop/tools/math-kernel-library.html}
+  url={https://software.intel.com/content/www/us/en/develop/tools/math-kernel-library.html},
   note={accessed on 23/12/2020},
   urldate={23/12/2020}
 }
@@ -133,4 +133,11 @@
     note = "Version 2.4.0",
     howpublished = "\url{https://www.cantera.org}",
     doi = {10.5281/zenodo.1174508}
+}
+
+@article{gnumake,
+  title={GNU Make-A Program for Directing Recompilation},
+  author={Stallman, Richard M and McGrath, Roland},
+  year={1991},
+  publisher={Citeseer}
 }
