--- a/doc/TFG.bib
+++ b/doc/TFG.bib
@@ -12,7 +12,13 @@
   organization={POP-coe},
   url={https://pop-coe.eu/},
   note={accesed on 26/09/2020}
+}
 
+@misc{slurmdocu,
+  title={Slurm documentation},
+  organization={Slurm},
+  url={https://slurm.schedmd.com/documentation.html},
+  note={accesed on 23/12/2020}
 }
 
 @article{programminModels, 
@@ -140,4 +146,13 @@
   author={Stallman, Richard M and McGrath, Roland},
   year={1991},
   publisher={Citeseer}
+}
+
+@inproceedings{slurm,
+  title={Slurm: Simple linux utility for resource management},
+  author={Yoo, Andy B and Jette, Morris A and Grondona, Mark},
+  booktitle={Workshop on Job Scheduling Strategies for Parallel Processing},
+  pages={44--60},
+  year={2003},
+  organization={Springer}
 }
