--- a/doc/background/alya.tex
+++ b/doc/background/alya.tex
@@ -71,4 +71,4 @@ Since we are running in a production HPC environment, we have to use the resourc
 mpirun -np ${SLURM_NTASKS} ./Alya.x CASE_NAME
 \end{lstlisting}
 
-Once we can run the code, we need to verify executions lead to correct results and understand the output.
+%Once we can run the code, we need to verify executions lead to correct results and understand the output.
