--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -20,6 +20,8 @@
 \usepackage{xcolor}
 \usepackage{listings}
 \usepackage{booktabs}
+\usepackage{tikz}
+\usetikzlibrary{trees,positioning,arrows}
 \lstset{
     frame=tb, % draw a frame at the top and bottom of the code block
     tabsize=4, % tab space width
